[package]
name = "tictactoe_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
        "bevy_winit",
        "bevy_render",
        "bevy_sprite",
        "bevy_text",
        "bevy_asset",
        "bevy_core_pipeline",
        "webgl2",
        "png"
] }
wasm-bindgen = "0.2"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 'z'
